# type_python_api_tests

./: .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml
common/deco/: deco_logger.py  request_logger.py
fixtures/: api_client.py
fixtures/api/: client.py  structure.py
fixtures/api/models/: client.py
fixtures/auth/: api.py
fixtures/auth/models/: auth.py
fixtures/register/: api.py
fixtures/register/models/: register.py
tests/auth/: test_auth.py
tests/register/: test_register_user.py
