[tool.poetry]
name = "type-python-api-tests"
version = "0.1.0"
description = "Python API tests with strong typing"
authors = ["alexanderlozovoy <a.litovsky@smartypay.io >"]
readme = "README.md"
packages = [{include = "type_python_api_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
pydantic = "^1.10.8"
requests = "^2.31.0"
faker = "^18.9.0"
pre-commit = "^3.3.2"
mypy = "^1.3.0"
types-requests = "^2.31.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
